--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -34,14 +34,14 @@
         android:key="pref_add_icon_to_home"
         android:title="@string/auto_add_shortcuts_label"
         android:summary="@string/auto_add_shortcuts_description"
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:persistent="true" />
 
     <SwitchPreference
         android:key="pref_show_searchbar"
         android:title="@string/show_searchbar_title"
         android:summary="@string/show_searchbar_summary"
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:persistent="true"/>
 
     <SwitchPreference
