--- a/res/layout/preference_iconpack.xml
+++ b/res/layout/preference_iconpack.xml
@@ -41,8 +41,9 @@
             android:id="@android:id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:maxWidth="36dp"
-            app:maxHeight="36dp" />
+            app:maxWidth="48dp"
+            app:maxHeight="48dp"
+            android:padding="12dp" />
     </LinearLayout>
 
     <RelativeLayout
